WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116490
Don't snapshot plugins that can't be snapshotted
https://bugs.webkit.org/show_bug.cgi?id=116490
Summary
Don't snapshot plugins that can't be snapshotted
Dean Jackson
Reported
2013-05-20 18:59:42 PDT
The QuickTime plugin can't be snapshotted until we can capture the accelerated compositing. If we see a QT plugin in snapshot mode, restart it. <
rdar://problem/13918391
>
Attachments
Patch
(15.32 KB, patch)
2013-05-20 19:15 PDT
,
Dean Jackson
no flags
Details
Formatted Diff
Diff
Patch (build test)
(16.23 KB, patch)
2013-05-20 19:46 PDT
,
Dean Jackson
no flags
Details
Formatted Diff
Diff
Patch
(15.11 KB, patch)
2013-05-22 16:07 PDT
,
Dean Jackson
thorton
: review+
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2013-05-20 19:15:06 PDT
Created
attachment 202370
[details]
Patch
Dean Jackson
Comment 2
2013-05-20 19:46:06 PDT
Created
attachment 202372
[details]
Patch (build test)
Dean Jackson
Comment 3
2013-05-22 16:07:19 PDT
Created
attachment 202629
[details]
Patch
Tim Horton
Comment 4
2013-05-22 16:12:04 PDT
Comment on
attachment 202629
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=202629&action=review
> Source/WebKit2/WebProcess/Plugins/PluginProxy.cpp:236 > + if (m_waitingOnAsynchronousInitialization) > + return false;
Hmmmmmm.
> Source/WebKit2/WebProcess/Plugins/PluginView.cpp:579 > + if (m_plugin->pluginLayer()) { > + if (frame()) {
All-in-one-if
> Source/WebKit2/WebProcess/Plugins/PluginView.cpp:1641 > + if (!m_plugin->supportsSnapshotting() && m_pluginElement->isPlugInImageElement()) {
I think the first one is significantly more expensive to compute (needs IPC), should you swap these? (answer: it doesn't matter because this is not hot code at all).
Dean Jackson
Comment 5
2013-05-22 17:03:19 PDT
Committed
r150556
: <
http://trac.webkit.org/changeset/150556
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug