Don't snapshot plugins that can't be snapshotted https://bugs.webkit.org/show_bug.cgi?id=116490

Reviewed by Tim Horton.

Some plugins, such as QuickTime, don't support snapshotting. We're
planning on another way to capture snapshots, but in the meantime make
sure that they don't fail to initialise because they were told to
not use accelerated rendering.

Source/WebCore:

* WebCore.exp.in: Export restartSnapshottedPlugin so that it can be used from WK2.
* html/HTMLPlugInImageElement.cpp:
(WebCore::HTMLPlugInImageElement::restartSimilarPlugIns): Don't set the play state before restarting.
(WebCore::HTMLPlugInImageElement::userDidClickSnapshot): Make sure we indicated that this snapshotted plugin was clicked.
* html/HTMLPlugInImageElement.h: Move restartSnapshottedPlugin from protected to public.
* rendering/RenderSnapshottedPlugIn.cpp:
(WebCore::RenderSnapshottedPlugIn::handleEvent): Don't set play state here. Let the restart functions do it.

Source/WebKit2:

Expose a new message on the plugins so that they can tell the PluginView
if they support snapshotting or not.

* PluginProcess/PluginControllerProxy.cpp:
(WebKit::PluginControllerProxy::supportsSnapshotting): New method.
* PluginProcess/PluginControllerProxy.h: Ditto.
* PluginProcess/PluginControllerProxy.messages.in: Message signature.

* WebProcess/Plugins/Netscape/NetscapePlugin.h: Add supportsSnapshotting.
* WebProcess/Plugins/PDF/SimplePDFPlugin.h: Ditto.
* WebProcess/Plugins/Plugin.h: Ditto - pure virtual here.

* WebProcess/Plugins/PluginProxy.cpp:
(WebKit::PluginProxy::supportsSnapshotting): Send the message to the plugin process and return the results.
* WebProcess/Plugins/PluginProxy.h:

* WebProcess/Plugins/PluginView.cpp:
(WebKit::PluginView::didInitializePlugin): If the snapshotting plugin has a layer, make
    sure to add it to the tree.
(WebKit::PluginView::isAcceleratedCompositingEnabled): Snapshotting plugins can use
    accelerated compositing, just like normal plugins.
(WebKit::PluginView::pluginSnapshotTimerFired): If the plugin doesn't allow snapshotting,
    immediately restart it.

Canonical link: https://commits.webkit.org/134946@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@150556 268f45cc-cd09-0410-ab3c-d52691b4dbfc